[gd_scene load_steps=2 format=3 uid="uid://dxryw3lw81j5f"]

[ext_resource type="Script" path="res://scripts/start_menu.gd" id="1_uwvra"]

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource("1_uwvra")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 2.0
color = Color(0.141879, 0.0321499, 0.302276, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -46.5
offset_right = 50.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="Wizard Trials" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
text = "Wizard Trials"

[node name="StartButton" type="Button" parent="Background/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="UpgradesButton" type="Button" parent="Background/VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Gem Shop"

[node name="QuitButton" type="Button" parent="Background/VBoxContainer"]
layout_mode = 2
text = "Quit Game"
